# solanaarbitragebot

./: .gitignore  Makefile  README.md  my-bot-wallet.json  package.json
bot/: package.json  tsconfig.json
bot/src/: config.ts  discovery.ts  execution.ts  main.ts  types.ts
bot/src/data/: websocketManager.ts
bot/src/execution/: smartRouter.ts
bot/src/integrations/: raydium.ts
bot/src/markets/: orca.ts
bot/src/monitoring/: analytics.ts
bot/src/risk/: advancedRiskManager.ts
bot/src/strategies/: index.ts
bot/src/types/: enhanced.ts
bot/src/utils/: config.ts  logger.ts
configs/: devnet.yaml
program/: Anchor.toml  Cargo.toml  find-mainnet-pools.js  find-whirlpools.js  flash-loan-strategy.ts  init-working.ts  package-lock.json  package.json  test-orca-instruction.ts  test-real-orca-swap.ts  wallet.json
program/programs/program/: Cargo.toml
program/programs/program/src/: lib.rs
program/tests/: program.ts  quick-test.ts
sdk/: idl.json
test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1755433290144138  MANIFEST-000021  OPTIONS-000027  OPTIONS-000029
