[package]
name = "program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
custom-heap = []
custom-panic = []
anchor-debug = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
# DEX integrations (optional for now)
orca = []
raydium = []
jupiter = []
# Flash loan providers (optional for now)  
solend = []
port = []
# Default features for production
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"

# SPL Token for all DEX interactions
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
